Finished sample search results page. formatted date field and adjusted table as best as possible for each column. Unfortunately at the current width some stuff may cut off slightly due to fixed width divs that dont expand.

--- a/software/cananolab-webapp/web/styles/main.css
+++ b/software/cananolab-webapp/web/styles/main.css
@@ -1262,7 +1262,8 @@ a:hover.mainMenuLink.home {
     }
 
     .sampleStyle div.ngCell.col3 {
-        border-left: 1px solid #D4D4D4
+        border-left: 1px solid #D4D4D4;
+        padding: 3px;        
     }
 
     .sampleStyle div.ngCell.col2 {
